Added more packages per discussion with Feng and Hu