@@ -1,7 +1,7 @@
 package dk.alexandra.trulioo.issuer;
 
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Map;
@@ -17,8 +17,8 @@ public class ParserTest {
 
   @Test
   public void testSunshine() throws Exception {
-    String request = Files.readString(Path.of("src/test/data/verification_request.json"));
-    String response = Files.readString(Path.of("src/test/data/verification_response.json"));
+    String request = Files.readAllLines(Paths.get("src/test/data/verification_request.json")).stream().reduce("", String::concat);
+    String response = Files.readAllLines(Paths.get("src/test/data/verification_response.json")).stream().reduce("", String::concat);
     Parser parser = new Parser(new JSONObject(request), (new JSONObject(response)).getJSONObject("Record"));
     Map<String, X500Name> names = parser.getX500Names();
     Map<String, Extensions> extensions = parser.getExtensions();
